# minimax-cpp

./: .gitignore  CMakeLists.txt  README.md
src/: game.cpp  game.hpp  main.cpp  minimax.cpp  minimax.hpp
